--- a/css/style-book-detail.css
+++ b/css/style-book-detail.css
@@ -216,7 +216,6 @@ section#section-detail-book div#container-detail-book #item-detail-book-right {
   width: 100%;
   height: -moz-fit-content;
   height: fit-content;
-  padding: 20px;
   border-radius: 8px;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -369,18 +368,30 @@ section#section-detail-book div#container-detail-book div#item-detail-book-right
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin-top: 30px;
 }
 #section-recommandation #container-cards .card {
   position: relative;
-  max-width: 450px;
-  min-width: 450px;
-  width: 33%;
-  margin: 100px auto 40px auto;
-  height: 230px;
-  padding: 15px 5px 15px 200px;
+  width: 100%;
+  max-width: 350px;
+  margin: 320px auto -50px auto;
+  padding: 15px;
+  min-height: 180px;
+  height: -moz-fit-content;
+  height: fit-content;
   border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+@media screen and (min-width: 500px) {
+  #section-recommandation #container-cards .card {
+    max-width: 450px;
+    height: 230px;
+    margin: 100px 10px 40px 10px;
+    padding: 15px 5px 15px 200px;
+    background-color: #fafafb;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    transform: translateY(100%);
+  }
 }
 #section-recommandation #container-cards .card:hover img {
   transform: translateY(-15px);
