--- a/css/style-book-detail.css
+++ b/css/style-book-detail.css
@@ -180,6 +180,9 @@ section#section-detail-book div#container-detail-book div.item-detail-book-left 
     font-size: 30px;
   }
 }
+section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book {
+  margin-bottom: 40px;
+}
 section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li {
   display: flex;
   flex-wrap: wrap;
@@ -189,15 +192,19 @@ section#section-detail-book div#container-detail-book div.item-detail-book-left 
   border-radius: 8px;
   color: gray;
 }
+@media screen and (min-width: 500px) {
+  section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li:nth-child(odd) {
+  background-color: #f2f2f2; /* couleur pour les éléments impairs */
+}
 @media screen and (min-width: 950px) {
   section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li {
     width: 80%;
     font-size: 18px;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li:nth-child(odd) {
-    background-color: #f2f2f2; /* couleur pour les éléments impairs */
   }
 }
 section#section-detail-book div#container-detail-book div.item-detail-book-left ul.all-info-book li span.bdd-var {
@@ -216,6 +223,7 @@ section#section-detail-book div#container-detail-book #item-detail-book-right {
   width: 100%;
   height: -moz-fit-content;
   height: fit-content;
+  padding: 15px;
   border-radius: 8px;
   background-color: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -236,8 +244,8 @@ section#section-detail-book div#container-detail-book #item-detail-book-right fo
 }
 section#section-detail-book div#container-detail-book #item-detail-book-right form.like-main-pict input.heart-wishlist {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: -60px;
+  right: 0px;
 }
 section#section-detail-book div#container-detail-book #item-detail-book-right form.like-main-pict input.input-heart {
   background-size: cover;
@@ -297,6 +305,16 @@ section#section-detail-book div#container-detail-book #item-detail-book-right ul
 section#section-detail-book div#container-detail-book #item-detail-book-right ul.list-info-revervation li:last-child {
   color: gray;
 }
+section#section-detail-book div#container-detail-book div#item-detail-book-right {
+  max-width: 500px;
+  margin: 0 auto;
+  width: 100%;
+}
+@media screen and (min-width: 950px) {
+  section#section-detail-book div#container-detail-book div#item-detail-book-right {
+    width: 40%;
+  }
+}
 section#section-detail-book div#container-detail-book div#item-detail-book-right h4.title-work-description {
   font-size: 20px;
   color: #0868ae;
@@ -348,19 +366,29 @@ section#section-detail-book div#container-detail-book div#item-detail-book-right
 }
 
 #section-recommandation {
-  padding-bottom: 60px;
   padding-bottom: 140px;
+  width: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 #section-recommandation h3.standard-title-section {
   font-size: 30px;
   font-family: "Nova Slim", cursive, sans-serif;
   color: #0868ae;
   margin-top: 16px;
-  margin-bottom: 6px;
+  margin-bottom: -40px;
+  text-align: center;
+}
+@media screen and (min-width: 500px) {
+  #section-recommandation h3.standard-title-section {
+    font-size: 40px;
+    margin-bottom: 40px;
+  }
 }
 @media screen and (min-width: 950px) {
   #section-recommandation h3.standard-title-section {
     font-size: 40px;
+    margin-bottom: 40px;
   }
 }
 #section-recommandation #container-cards {
@@ -390,7 +418,6 @@ section#section-detail-book div#container-detail-book div#item-detail-book-right
     padding: 15px 5px 15px 200px;
     background-color: #fafafb;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    transform: translateY(100%);
   }
 }
 #section-recommandation #container-cards .card:hover img {
@@ -401,14 +428,22 @@ section#section-detail-book div#container-detail-book div#item-detail-book-right
 }
 #section-recommandation #container-cards .card img {
   position: absolute;
-  top: -40px;
-  left: 25px;
+  top: -100px;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 150px;
   height: 230px;
   -o-object-fit: cover;
      object-fit: cover;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: transform 0.5s ease;
+}
+@media screen and (min-width: 500px) {
+  #section-recommandation #container-cards .card img {
+    top: -40px;
+    left: 25px;
+    transform: none;
+  }
 }
 #section-recommandation #container-cards .card img:hover {
   transform: translateY(-15px);
