--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,7 @@ $white: #fff;
 $black: #070606;
 $footer: #043a61;
 $background: #fafafb;
-$bgModal: rgba(6, 13, 30, 0.5);;
+$bgModal: rgba(6, 13, 30, 0.5);
 
 *,
 ::after,
