--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -31,14 +31,20 @@ body div.bloc-modale {
 
 h1.h1-dashboard {
   font-size: 20px;
+  line-height: 25px;
   text-align: inherit;
   color: #0868ae;
   margin-bottom: 6px;
+  padding-left: 10px;
+}
+h1.h1-dashboard::first-letter {
+  text-transform: uppercase;
 }
 @media screen and (min-width: 950px) {
   h1.h1-dashboard {
     font-size: 30px;
     margin-bottom: 20px;
+    padding-left: 0;
   }
 }
 
@@ -47,16 +53,18 @@ h2.h2-dashboard {
   text-align: inherit;
   color: #0868ae;
   margin-bottom: 6px;
+  padding-left: 10px;
 }
 @media screen and (min-width: 950px) {
   h2.h2-dashboard {
     font-size: 20px;
     margin-bottom: 12px;
+    padding-left: 0px;
   }
 }
 
 h3.h3-dashboard {
-  font-size: 12px;
+  font-size: 18px;
   text-align: inherit;
   color: #ff5e38;
   margin-right: auto;
@@ -356,8 +364,15 @@ div.container-dashboard-base .box-dashboard hr {
 }
 .container-home-tabs ul.list-book-box li.item-list-book {
   display: flex;
+  flex-direction: column;
   width: 100%;
-  padding: 10px 0 10px 20px;
+  padding: 30px 0;
+}
+@media screen and (min-width: 1250px) {
+  .container-home-tabs ul.list-book-box li.item-list-book {
+    flex-direction: row;
+    padding: 10px 0 10px 20px;
+  }
 }
 .container-home-tabs ul.list-book-box li.item-list-book:nth-child(odd) {
   background-color: #f0f7ff;
@@ -366,7 +381,15 @@ div.container-dashboard-base .box-dashboard hr {
 .container-home-tabs ul.list-book-box li.item-list-book div.format-pict-book {
   display: flex;
   flex-wrap: wrap;
-  width: 40%;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+@media screen and (min-width: 1250px) {
+  .container-home-tabs ul.list-book-box li.item-list-book div.format-pict-book {
+    justify-content: inherit;
+    margin-bottom: 0px;
+    width: 40%;
+  }
 }
 .container-home-tabs ul.list-book-box li.item-list-book div.format-pict-book img.pict-book-standard {
   height: 100px;
@@ -385,18 +408,33 @@ div.container-dashboard-base .box-dashboard hr {
   color: gray;
 }
 .container-home-tabs ul.list-book-box li.item-list-book div.container-info-loan {
-  width: 60%;
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  flex-direction: column;
   justify-content: space-evenly;
+}
+@media screen and (min-width: 1250px) {
+  .container-home-tabs ul.list-book-box li.item-list-book div.container-info-loan {
+    width: 60%;
+    flex-direction: row;
+    justify-content: space-evenly;
+  }
 }
 .container-home-tabs ul.list-book-box li.item-list-book div.container-info-loan p.info-disponibility {
   color: #ff5e38;
   font-weight: bold;
-  margin-right: 70px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1250px) {
+  .container-home-tabs ul.list-book-box li.item-list-book div.container-info-loan p.info-disponibility {
+    margin-right: 70px;
+    margin-bottom: 0px;
+  }
 }
 .container-home-tabs ul.list-book-box li.item-list-book div.container-info-loan a.btn-format-standard {
+  display: block;
   padding: 15px;
   font-weight: bold;
   border: none;
@@ -412,6 +450,9 @@ div.container-dashboard-base .box-dashboard hr {
   cursor: pointer;
 }
 .container-home-tabs ul.list-book-box li.item-list-book div.container-info-loan input.delete-favorit-book {
+  position: absolute;
+  top: -200px;
+  left: 10px;
   background-image: url("../img/picto/trash-03 (1).svg");
   background-size: cover;
   background-position: center;
@@ -419,8 +460,19 @@ div.container-dashboard-base .box-dashboard hr {
   background-color: transparent;
   border: none;
   cursor: pointer;
-  width: 30px; /* Ajustez la largeur selon vos besoins */
-  height: 30px; /* Ajustez la hauteur selon vos besoins */
+  width: 30px;
+  height: 30px;
+  margin-top: 20px;
+}
+@media screen and (min-width: 350px) {
+  .container-home-tabs ul.list-book-box li.item-list-book div.container-info-loan input.delete-favorit-book {
+    position: inherit;
+  }
+}
+@media screen and (min-width: 1250px) {
+  .container-home-tabs ul.list-book-box li.item-list-book div.container-info-loan input.delete-favorit-book {
+    position: inherit;
+  }
 }
 
 .empty {
