--- a/css/style-admin.css
+++ b/css/style-admin.css
@@ -1034,7 +1034,7 @@ div#confirmed-error:hover {
   height: -moz-fit-content;
   height: fit-content;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 }
@@ -1052,22 +1052,24 @@ div#confirmed-error:hover {
   padding: 10px 0 20px 0;
 }
 .container-crud-book-tabs div.search-add-crud-book div.search-crud-input {
-  display: flex;
-  align-items: baseline;
-  width: -moz-fit-content;
-  width: fit-content;
+  width: 100%;
   margin-right: auto;
 }
-.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input.input-search {
-  width: 400px;
+.container-crud-book-tabs div.search-add-crud-book div.search-crud-input form input.input-search {
   height: 40px;
   padding-left: 10px;
   border-radius: 8px;
   margin-left: auto;
   margin-right: 10px;
 }
-.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input.btn-search {
-  width: 100px;
+@media screen and (min-width: 950px) {
+  .container-crud-book-tabs div.search-add-crud-book div.search-crud-input form input.input-search {
+    width: 400px;
+  }
+}
+.container-crud-book-tabs div.search-add-crud-book div.search-crud-input form input.btn-search {
+  display: block;
+  width: 100%;
   height: 40px;
   border-radius: 8px;
   background-color: #0868ae;
@@ -1076,7 +1078,12 @@ div#confirmed-error:hover {
   margin-right: 30px;
   font-weight: bold;
 }
-.container-crud-book-tabs div.search-add-crud-book div.search-crud-input input.btn-search:hover {
+@media screen and (min-width: 950px) {
+  .container-crud-book-tabs div.search-add-crud-book div.search-crud-input form input.btn-search {
+    width: 100px;
+  }
+}
+.container-crud-book-tabs div.search-add-crud-book div.search-crud-input form input.btn-search:hover {
   cursor: pointer;
   background-color: #05497b;
 }
