--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -46,7 +46,7 @@ h1.h1-dashboard {
   color: $main-blue;
   margin-bottom: 6px;
   padding-left: 10px;
-  
+
   &::first-letter {
     text-transform: uppercase;
   }
@@ -69,7 +69,6 @@ h2.h2-dashboard {
     font-size: 20px;
     margin-bottom: 12px;
     padding-left: 0px;
-
   }
 }
 
@@ -519,13 +518,11 @@ div.container-dashboard-base {
 
           @media screen and (min-width: 350px) {
             position: inherit;
-
           }
 
           @media screen and (min-width: 1250px) {
             position: inherit;
           }
-          
         }
       }
     }
@@ -1184,7 +1181,7 @@ div#confirmed-error {
 .container-crud-book-tabs {
   height: fit-content;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
 
@@ -1202,33 +1199,42 @@ div#confirmed-error {
     padding: 10px 0 20px 0;
 
     div.search-crud-input {
-      display: flex;
-      align-items: baseline;
-      width: fit-content;
+      width: 100%;
       margin-right: auto;
 
-      input.input-search {
-        width: 400px;
-        height: 40px;
-        padding-left: 10px;
-        border-radius: 8px;
-        margin-left: auto;
-        margin-right: 10px;
-      }
+      form {
 
-      input.btn-search {
-        width: 100px;
-        height: 40px;
-        border-radius: 8px;
-        background-color: $main-blue;
-        border: $main-blue;
-        color: $white;
-        margin-right: 30px;
-        font-weight: bold;
+        input.input-search {
+          height: 40px;
+          padding-left: 10px;
+          border-radius: 8px;
+          margin-left: auto;
+          margin-right: 10px;
 
-        &:hover {
-          cursor: pointer;
-          background-color: $btn-main-blue-over;
+          @media screen and (min-width: 950px) {
+            width: 400px;
+          }
+        }
+
+        input.btn-search {
+          display: block;
+          width: 100%;
+          height: 40px;
+          border-radius: 8px;
+          background-color: $main-blue;
+          border: $main-blue;
+          color: $white;
+          margin-right: 30px;
+          font-weight: bold;
+
+          @media screen and (min-width: 950px) {
+            width: 100px;
+          }
+
+          &:hover {
+            cursor: pointer;
+            background-color: $btn-main-blue-over;
+          }
         }
       }
     }
