--- a/css/style.scss
+++ b/css/style.scss
@@ -54,7 +54,7 @@ a {
 
 h1,
 h2 {
-  font-family: "Nova Slim", sans-serif;
+  font-family: "Nova Slim", sans-serif;;
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
