--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -63,12 +63,10 @@ h2.h2-dashboard {
   text-align: inherit;
   color: $main-blue;
   margin-bottom: 6px;
-  padding-left: 10px;
 
   @media screen and (min-width: 950px) {
     font-size: 20px;
     margin-bottom: 12px;
-    padding-left: 0px;
   }
 }
 
@@ -96,7 +94,7 @@ main {
   z-index: -1;
 
   @media screen and (min-width: 950px) {
-    padding-left: 100px;
+    padding-left: 70px;
   }
 
   // ---------- MODALE BOX DELETE BOX----------
@@ -1122,6 +1120,12 @@ p.info-succes-notif > strong {
   color: $white;
 }
 section#dashboard-page-book-crud {
+  padding-top: 20px;
+
+  @media screen and (min-width: 950px) {
+    padding-top: 40px;
+  }
+
   div#confirmed-delete {
     width: 350px;
     height: 160px;
@@ -1196,38 +1200,34 @@ div#confirmed-error {
     z-index: 30;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     margin-bottom: 20px;
     border-bottom: 1px solid gray;
-    padding: 10px 0 20px 0;
 
     div.search-crud-input {
-      width: 100%;
-      margin-right: auto;
-
       form {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
 
         input.input-search {
+          width: 100%;
           height: 40px;
           padding-left: 10px;
           border-radius: 8px;
-          margin-left: auto;
-          margin-right: 10px;
-
-          @media screen and (min-width: 950px) {
-            width: 400px;
-          }
+          margin: 20px auto;
         }
 
         input.btn-search {
           display: block;
           width: 100%;
+          max-width: 200px;
           height: 40px;
           border-radius: 8px;
           background-color: $main-blue;
           border: $main-blue;
           color: $white;
-          margin-right: 30px;
           font-weight: bold;
 
           @media screen and (min-width: 950px) {
@@ -1239,38 +1239,38 @@ div#confirmed-error {
             background-color: $btn-main-blue-over;
           }
         }
+
+        a.btn-add {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 40px;
+          height: 40px;
+          border-radius: 8px;
+          background-color: $main-blue;
+          border: $main-blue;
+          color: $white;
+
+          &:hover {
+            cursor: pointer;
+            background-color: $btn-main-blue-over;
+          }
+        }
       }
-    }
 
-    a.btn-add {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 140px;
-      height: 40px;
-      border-radius: 8px;
-      background-color: $main-blue;
-      border: $main-blue;
-      color: $white;
-      margin-right: 20px;
-      font-weight: bold;
+      button#btn-all-detail {
+        display: block;
+        border: none;
+        background-color: transparent;
+        color: $main-blue;
+        font-weight: bold;
+        padding: 20px 10px;
 
-      &:hover {
-        cursor: pointer;
-        background-color: $btn-main-blue-over;
-      }
-    }
-
-    button#btn-all-detail {
-      border: none;
-      background-color: transparent;
-      color: $main-blue;
-      font-weight: bold;
-
-      &:hover {
-        cursor: pointer;
-        color: $btn-main-blue-over;
-        text-decoration: underline;
+        &:hover {
+          cursor: pointer;
+          color: $btn-main-blue-over;
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -1278,8 +1278,8 @@ div#confirmed-error {
   div#container-list-book-crud {
     ul.list-book-crud {
       li.item-book-crud {
-        padding-top: 10px;
-        padding-bottom: 5px;
+        padding-top: 30px;
+        padding-bottom: 30px;
 
         &:nth-child(odd) {
           background-color: #f0f7ff;
@@ -1290,13 +1290,21 @@ div#confirmed-error {
           position: relative;
           display: flex;
           flex-wrap: wrap;
+          flex-direction: column;
           justify-content: space-between;
           align-items: center;
-          width: 95%;
+          width: 90%;
+          margin: 0 auto;
           min-height: 120px;
+
+          @media screen and (min-width: 950px) {
+            flex-direction: row;
+          }
+
           li {
-            width: 150px;
+            // width: 150px;
             text-align: center;
+            padding: 5px;
 
             img.pict-book-crud {
               height: 100px;
@@ -1316,18 +1324,36 @@ div#confirmed-error {
             font-size: 18px;
             font-weight: bold;
             font-family: "Nova Slim", cursive, sans-serif;
-            width: 400px;
+
+            @media screen and (min-width: 950px) {
+              width: 400px;
+            }
+          }
+
+          li.item-author-crud {
+            color: gray;
+          }
+
+          li.item-status-crud {
+            color: $btn-red;
+            font-weight: bold;
           }
 
           li.btn-option-crud {
             position: absolute;
-            right: -60px;
-            top: 35px;
+            right: -20px;
+            top: -20px;
             font-size: 30px;
             padding: 2px 8px;
             width: fit-content;
             height: fit-content;
             border-radius: 8px;
+
+            @media screen and (min-width: 1200px) {
+              position: absolute;
+              right: -60px;
+              top: -20px;
+            }
 
             &:hover {
               cursor: pointer;
@@ -1411,13 +1437,23 @@ div#confirmed-error {
             &.active {
               display: block;
             }
+
             div.container-flex-crud {
               width: 100%;
               display: flex;
-              flex-wrap: wrap;
-              justify-content: space-evenly;
+              flex-direction: column;
               padding-top: 30px;
               padding-bottom: 30px;
+
+              @media screen and (min-width: 950px) {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
+              }
+
+              @media screen and (min-width: 950px) {
+                flex-direction: row;
+              }
 
               h3 {
                 margin-bottom: 15px;
@@ -1425,22 +1461,41 @@ div#confirmed-error {
               }
 
               .item-complete-left {
-                width: 40%;
+                width: 100%;
+                margin-top: 20px;
                 color: $main-blue;
+
+                @media screen and (min-width: 950px) {
+                  width: 100%;
+                }
+
+                @media screen and (min-width: 1200px) {
+                  width: 45%;
+                }
               }
 
               .item-complete-right {
-                width: 40%;
+                width: 100%;
+
+                @media screen and (min-width: 950px) {
+                  width: 100%;
+                }
+
+                @media screen and (min-width: 1200px) {
+                  width: 45%;
+                }
+
                 ul.all-info-book {
                   li {
                     display: flex;
-                    flex-wrap: wrap;
                     flex-direction: column;
+                    justify-content: space-between;
                     font-size: 16px;
                     color: gray;
                     padding: 6px 20px;
                     border-radius: 8px;
-                    @media screen and (min-width: 950px) {
+
+                    @media screen and (min-width: 500px) {
                       width: 100%;
                       height: fit-content;
                       font-size: 18px;
@@ -1459,6 +1514,7 @@ div#confirmed-error {
                     span.bdd-var {
                       font-size: 16px;
                       color: $main-blue;
+
                       @media screen and (min-width: 950px) {
                         font-size: 18px;
                       }
