--- a/css/style-admin.scss
+++ b/css/style-admin.scss
@@ -62,7 +62,7 @@ h2.h2-dashboard {
   font-size: 14px;
   text-align: inherit;
   color: $main-blue;
-  margin-bottom: 6px;
+  margin-bottom: 6px;f
 
   @media screen and (min-width: 950px) {
     font-size: 20px;
